# wp4-platform-plc-mock

./: .dockerignore  Dockerfile  build_docker.sh  main.py  pyproject.toml
