[tool.poetry]
name = "plc-mock"
version = "0.1.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [{include = "plc_mock"}]

[tool.poetry.dependencies]
python = "^3.11"
asyncua = "^1.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
